Efmub-Ogy/src/objects/Complaint_Code__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compensable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compensable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concord_Code_Number__c</fullName>
        <label>Concord Code Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disability_Code_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disability Code Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <formula>If( ISPICKVAL(Type__c, &apos;Delta&apos;), Level_1__c+ &apos; | &apos;+ Level_2__c+ &apos; | &apos;+ Level_3__c+ &apos; | &apos;+ Level_4__c+ &apos; | &apos;+ Keywords__c, IF(ISPICKVAL(Type__c, &apos;DOT&apos;), Name+ &apos; | &apos;+ Level_1__c+ &apos; | &apos;+ Level_2__c+ &apos; | &apos;+ Level_3__c+ &apos; | &apos;+ Level_4__c+ &apos; | &apos;+ Keywords__c,TEXT(Type__c)+ &apos; | &apos;+ Name+ &apos; | &apos;+ Level_1__c+ &apos; | &apos;+ Level_2__c+ &apos; | &apos;+ Level_3__c+ &apos; | &apos;+ Level_4__c+ &apos; | &apos;+ Keywords__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_1__c</fullName>
        <label>Level 1</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2__c</fullName>
        <label>Level 2</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_3__c</fullName>
        <label>Level 3</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lowest_Level__c</fullName>
        <formula>IF(!ISBLANK(Level_1__c) &amp;&amp; ISBLANK(Level_2__c), Level_1__c,
IF(!ISBLANK(Level_2__c) &amp;&amp; ISBLANK(Level_3__c), Level_2__c,
IF(!ISBLANK(Level_3__c) &amp;&amp; ISBLANK(Level_4__c), Level_3__c,
Level_4__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lowest Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <description>This is the Notification Type passed to the Mercury arbitration service.</description>
        <inlineHelpText>This is the Notification Type passed to the Mercury arbitration service.</inlineHelpText>
        <label>Mercury Notification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CMPT</fullName>
                </value>
                <value>
                    <fullName>CMPL</fullName>
                </value>
                <value>
                    <fullName>PSRY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_L1__c</fullName>
        <label>Phoenix L1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_L2__c</fullName>
        <label>Phoenix L2</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_L3__c</fullName>
        <label>Phoenix L3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Possible_Complaint_Locations__c</fullName>
        <label>Possible Complaint Locations</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Added to support the eTCV flight number associated with the service recovery.</description>
        <label>Priority</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delta</fullName>
                </value>
                <value>
                    <fullName>DOT</fullName>
                </value>
                <value>
                    <fullName>Special PSR</fullName>
                </value>
                <value>
                    <fullName>Dot Disability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Complaint Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Level_1__c</columns>
        <columns>Level_2__c</columns>
        <columns>Level_3__c</columns>
        <columns>Level_4__c</columns>
        <columns>Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Display_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Description__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>DOT</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Complaint Codes</pluralLabel>
    <recordTypes>
        <fullName>DOT</fullName>
        <active>true</active>
        <label>DOT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Delta</fullName>
        <active>true</active>
        <label>Delta</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dot_Disability</fullName>
        <active>true</active>
        <label>Dot Disability</label>
    </recordTypes>
    <recordTypes>
        <fullName>Special_PSR</fullName>
        <active>true</active>
        <label>Special PSR</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>